--- a/firebase.json
+++ b/firebase.json
@@ -6,6 +6,22 @@
         "source": "/detail/*",
         "destination": "/index.html"
       }
+    ],
+    "headers": [
+      {
+        "source": "/",
+        "headers": [{
+          "key": "Link",
+          "value": "</elements/my-app.js>;rel=preload;as=script,</style.css>;rel=preload;as=style,</elements/list-view.js>;rel=preload;as=script,</data/list.json>;rel=preload;as=fetch"
+        }]
+      },
+      {
+        "source": "/detail/*",
+        "headers": [{
+          "key": "Link",
+          "value": "</elements/my-app.js>;rel=preload;as=script,</style.css>;rel=preload;as=style,</elements/detail-view.js>;rel=preload;as=script"
+        }]
+      }
     ]
   }
 }
